--- a/src/main/resources/templates/index5.html
+++ b/src/main/resources/templates/index5.html
@@ -95,24 +95,24 @@
 </table>
 
 <!-- 分頁導航 -->
-<!--<nav aria-label="Page navigation">-->
-<!--    <ul class="pagination justify-content-center">-->
-<!--        <li class="page-item disabled" th:if="${!products.first}">-->
-<!--            <a class="page-link" href="#" aria-label="Previous" disabled>-->
-<!--                <span aria-hidden="true">&laquo;</span>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--        <li class="page-item" th:each="i : ${#numbers.sequence(0, products.totalPages - 1)}"-->
-<!--            th:class="${i eq products.number} ? 'active' : ''">-->
-<!--            <a class="page-link" th:href="@{|?page=${i}|}" th:text="${i + 1}"></a>-->
-<!--        </li>-->
-<!--        <li class="page-item disabled" th:if="${!products.last}">-->
-<!--            <a class="page-link" href="#" aria-label="Next" disabled>-->
-<!--                <span aria-hidden="true">&raquo;</span>-->
-<!--            </a>-->
-<!--        </li>-->
-<!--    </ul>-->
-<!--</nav>-->
+<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+        <li class="page-item disabled" th:if="${!membersPage.first}">
+            <a class="page-link" href="#" aria-label="Previous" disabled>
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item" th:each="i : ${#numbers.sequence(0, membersPage.totalPages - 1)}"
+            th:class="${i eq membersPage.number} ? 'active' : ''">
+            <a class="page-link" th:href="@{|?page=${i}|}" th:text="${i + 1}"></a>
+        </li>
+        <li class="page-item disabled" th:if="${!membersPage.last}">
+            <a class="page-link" href="#" aria-label="Next" disabled>
+                <span aria-hidden="true">&raquo;</span>
+            </a>
+        </li>
+    </ul>
+</nav>
 
 <div id="overlay">
     <img id="overlay-img" src="" alt="Product Image">
