--- a/src/main/resources/static/css/backStage/index.css
+++ b/src/main/resources/static/css/backStage/index.css
@@ -89,3 +89,27 @@ img {
     cursor: default;
     color: #ccc;
 }
+
+#overlay {
+    display: none;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+#overlay img {
+    display: block;
+    margin: 0 auto;
+    max-width: 90%;
+    max-height: 90%;
+}
+
+#overlay.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
