--- a/src/main/resources/templates/backStage/index.html
+++ b/src/main/resources/templates/backStage/index.html
@@ -7,34 +7,12 @@
     <meta http-equiv="Expires" content="0">
 
     <title>Title</title>
-    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/backStage/index.css}">
     <!-- 引入Bootstrap样式 -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
 
-        #overlay {
-            display: none;
-            position: fixed;
-            z-index: 9999;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-        }
 
-        #overlay img {
-            display: block;
-            margin: 0 auto;
-            max-width: 90%;
-            max-height: 90%;
-        }
-
-        #overlay.active {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
 
     </style>
 
@@ -124,7 +102,6 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script>
-    <!--  修改按鈕事件  -->
     $(document).ready(function () {
         const fileInput = document.getElementById('hiddenFileInput');
         document.querySelectorAll('.product-img-change-btn').forEach(button => {
@@ -144,165 +121,9 @@
             });
         })
     });
-
-        function modifyEvent(button) {
-            // const productRow = button.closest('tr');
-            const CurrentObject = button.closest('tr');
-            const Object = PackJsonObject(CurrentObject);
-            alert(JSON.stringify(Object));
-            Modify_Member_Ajax(Object);
-        }
-
-        function PackJsonObject(Object) {
-            // const ID = productRow.querySelector(".productId").innerText;
-            // const name = productRow.querySelector(".product-img").src.replace(/^data:image\/jpeg;base64,/, "");
-
-            const ID = Object.querySelector("#ID").innerText;
-            const account = Object.querySelector("#account").innerText;
-            const password = Object.querySelector("#password").innerText;
-            const name = Object.querySelector("#name").innerText;
-            const email = Object.querySelector("#email").innerText;
-            const birthday = Object.querySelector("#birthday").innerText;
-            const phonenumber = Object.querySelector("#phonenumber").innerText;
-            const otherphonenumber = Object.querySelector("#otherphonenumber").innerText;
-            const homenumber = Object.querySelector("#homenumber").innerText;
-            const gender = Object.querySelector("#gender").innerText;
-            const avatar = Object.querySelector("#avatar").src.replace(/^data:image\/jpeg;base64,/, "");
-            const createtime = Object.querySelector("#createtime").innerText;
-            const updatedtime = Object.querySelector("#updatedtime").innerText;
-            const lastonlinetime = Object.querySelector("#lastonlinetime").innerText;
-
-            return {
-                memberid: ID,
-                account: account,
-                password: password,
-                name: name,
-                email: email,
-                birthday: birthday,
-                phonenumber: phonenumber,
-                otherphonenumber: otherphonenumber,
-                homenumber: homenumber,
-                gender: gender,
-                avatar : avatar,
-                createtime: createtime,
-                updatedtime: updatedtime,
-                lastonlinetime: lastonlinetime
-            };
-        }
-
-
-        function Modify_Member_Ajax(CurrentObject) {
-            $.ajax({
-                url: '/members/insert/' + CurrentObject.memberid,
-                type: 'POST',
-                contentType: 'application/json',
-                data: JSON.stringify(CurrentObject),
-                dataType: 'json',
-                success: function (response) {
-                    console.log('Product updated with ID:', response);
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error updating product:', xhr.statusText);
-                }
-            });
-        }
-
-
-    // document.addEventListener("DOMContentLoaded", function () {
-    //     const fileInput = document.getElementById('hiddenFileInput');
-    //     document.querySelectorAll('.product-img-change-btn').forEach(button => {
-    //         button.addEventListener('click', function () {
-    //             const productRow = this.closest('tr');
-    //             fileInput.onchange = function () {
-    //                 const file = fileInput.files[0];
-    //                 if (file) {
-    //                     const reader = new FileReader();
-    //                     reader.onload = function (e) {
-    //                         productRow.querySelector('.product-img').src = e.target.result;
-    //                     };
-    //                     reader.readAsDataURL(file);
-    //                 }
-    //             };
-    //             fileInput.click();
-    //         });
-    //     });
-    //
-    //     document.querySelectorAll('.productName, .productCategory, .productPrice, .productStock, .productDescription').forEach(cell => {
-    //         cell.addEventListener('dblclick', function () {
-    //             makeEditable(this);
-    //         });
-    //     });
-    // });
-    //
-    // function makeEditable(element) {
-    //     // Check if the element contains a span, if not we'll create one
-    //     let spanElement = element.querySelector('span');
-    //     if (!spanElement) {
-    //         spanElement = document.createElement('span');
-    //         spanElement.textContent = element.textContent.trim(); // Use the current text content of the element
-    //         element.textContent = ''; // Clear the current content
-    //         element.appendChild(spanElement); // Append the span to the element
-    //     }
-    //
-    //     // Continue with the rest of your code
-    //     const text = spanElement.textContent;
-    //     const input = document.createElement('input');
-    //     input.type = 'text';
-    //     input.value = text;
-    //     element.innerHTML = '';
-    //     element.appendChild(input);
-    //     input.focus();
-    //     input.onblur = function () {
-    //         spanElement.textContent = input.value;
-    //         element.innerHTML = '';
-    //         element.appendChild(spanElement);
-    //     };
-    // }
-    //
-    // function modifyProduct(button) {
-    //     const productRow = button.closest('tr');
-    //     const ProductObject = PackJsonObject(productRow);
-    //     alert(JSON.stringify(ProductObject));
-    //     ModifyProductEvent_Ajax(ProductObject);
-    // }
-    //
-    // function PackJsonObject(productRow) {
-    //     const ID = productRow.querySelector(".productId").innerText;
-    //     const Name = productRow.querySelector(".productName input").value;
-    //     const Category = productRow.querySelector(".productCategory input").value;
-    //     const Image = productRow.querySelector(".product-img").src.replace(/^data:image\/jpeg;base64,/, "");
-    //     const Price = productRow.querySelector(".productPrice input").value;
-    //     const Stock = productRow.querySelector(".productStock input").value;
-    //     const Description = productRow.querySelector(".productDescription input").value;
-    //
-    //     return {
-    //         proid: ID,
-    //         proname: Name,
-    //         procategory: Category,
-    //         proimage: Image,
-    //         proprice: parseFloat(Price),
-    //         prostock: parseInt(Stock, 10),
-    //         prodescription: Description
-    //     };
-    // }
-    //
-    // function ModifyProductEvent_Ajax(ProductObject) {
-    //     $.ajax({
-    //         url: '/Products/insert/' + ProductObject.proid,
-    //         type: 'POST',
-    //         contentType: 'application/json',
-    //         data: JSON.stringify(ProductObject),
-    //         dataType: 'json',
-    //         success: function (response) {
-    //             console.log('Product updated with ID:', response);
-    //         },
-    //         error: function (xhr, status, error) {
-    //             console.error('Error updating product:', xhr.statusText);
-    //         }
-    //     });
-    // }
-
+    modifyEvent(button);
+    Modify_Member_Ajax(CurrentObject);
 </script>
-
+<script th:src="@{/js/backStage/index.js}"></script>
 </body>
 </html>
