--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,10 @@
     <title>Photo Website</title>
 <!--    <link rel="stylesheet" th:href="@{css/frontEnd/index.css}">-->
     <link rel="stylesheet" th:href="@{/css/frontEnd/index.css}">
-    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">
+<!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
+
     </style>
 
 
@@ -28,17 +30,8 @@
     </div>
 </header>
 
-<section id="featured-photos">
-    <div class="slider">
-        <div class="slides">
-            <div class="slide" id="slide1"><img src="featured1.jpg" alt="Featured Photo 1"></div>
-            <div class="slide" id="slide2"><img src="featured2.jpg" alt="Featured Photo 2"></div>
-            <div class="slide" id="slide3"><img src="featured3.jpg" alt="Featured Photo 3"></div>
+<section id="featured-photos" th:replace="carousel :: carousel">
 
-        </div>
-        <a class="prev" onclick="moveSlide(-1)">&#10094;</a>
-        <a class="next" onclick="moveSlide(1)">&#10095;</a>
-    </div>
 </section>
 
 
@@ -68,16 +61,17 @@
 </section>
 
 <footer>
-    <p>&copy; 2024 PhotoSite</p>
+    <p>&copy; 2024 for DoDo</p>
     <a href="#">Privacy Policy</a>
     <a href="#">Contact</a>
 </footer>
 
-<script th:src="@{/css/frontEnd/index.js}"></script>
-
+<script th:src="@{/js/frontEnd/index.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
 
 </script>
+
 </body>
 </html>
