--- a/src/main/resources/static/css/frontEnd/carousel.css
+++ b/src/main/resources/static/css/frontEnd/carousel.css
@@ -34,3 +34,96 @@
 .prev {
     left: 0;
 }
+
+
+/* 样式重置 */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body, html {
+    width: 100%;
+    height: 100%;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5em 1em;
+}
+
+#logo {
+    font-size: 1.2em;
+}
+
+#hamburger-menu {
+    font-size: 1.5em;
+}
+
+#nav-menu {
+    list-style: none;
+    display: flex;
+    gap: 1em;
+}
+
+#nav-menu li a {
+    text-decoration: none;
+    color: #333;
+    font-size: 0.9em;
+    padding: 0.5em 0;
+}
+
+/* RWD */
+
+@media (max-width: 768px) {
+
+    #nav-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #nav-menu li {
+        width: 100%;
+    }
+
+    .w-100 {
+        width: 50%!important;
+        margin-left: 25%;
+    }
+}
+
+@media (min-width: 769px) {
+    #nav-menu {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #nav-menu li {
+        width: 100%;
+    }
+
+    .w-100 {
+        width: 50%!important;
+        margin-left: 25%;
+    }
+    .carousel-control-prev,
+    .carousel-control-next{
+        transform: scale(5);
+    }
+    .carousel-control-prev{
+        margin-left: 20%;
+    }
+    .carousel-control-next{
+        margin-right: 20%;
+    }
+
+    .carousel-h1{
+        font-size: .2em !important;
+    }
+    .carousel-h2{
+        font-size: .1em !important;;
+    }
+}
