--- a/src/main/resources/templates/carousel.html
+++ b/src/main/resources/templates/carousel.html
@@ -6,24 +6,25 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img th:src="@{image/frontEnd/20231210_104514.jpg}" class="d-block w-100" alt="First slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+            <img th:src="@{image/frontEnd/CLT-L29026 (2).JPG}" class="d-block w-100" alt="First slide">
+<!--            <div class="carousel-caption d-none d-md-block">-->
+            <div class="carousel-caption hidden-xs-down">
+                <h1 class="carousel-h1">基隆外海</h1>
+                <h2 class="carousel-h2">如果你正在尋找一個旅遊目的地，那麼這張圖片中的海景是一個不錯的選擇。</h2>
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{image/frontEnd/20231210_104517.jpg}" class="d-block w-100" alt="Second slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+            <img th:src="@{image/frontEnd/CLT-L29033 (1).JPG}" class="d-block w-100" alt="Second slide">
+            <div class="carousel-caption hidden-xs-down">
+                <h1 class="carousel-h1">Second slide label</h1>
+                <h2 class="carousel-h2">Some representative placeholder content for the second slide.</h2>
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{image/frontEnd/20231210_104525.jpg}" class="d-block w-100" alt="Third slide">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+            <img th:src="@{image/frontEnd/CLT-L29044.JPG}" class="d-block w-100" alt="Third slide">
+            <div class="carousel-caption hidden-xs-down">
+                <h1 class="carousel-h1">Third slide label</h1>
+                <h2 class="carousel-h2">Some representative placeholder content for the third slide.</h2>
             </div>
         </div>
     </div>
