--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,26 @@
 <!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
+        #carousel-div{
+            width: 100%;
+            height: 100%;
+        }
 
+        #mask{
+            background: rgba(0 , 0 , 0 , .1);
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            left: 0;
+            top: 0;
+            z-index: 999;
+        }
+
+        .carousel-control-prev,
+        .carousel-control-next,
+        .carousel-a-btn{
+            z-index: 1000;
+        }
     </style>
 
 
@@ -29,10 +48,12 @@
         <input type="search" placeholder="搜尋圖片...">
     </div>
 </header>
+<div id="carousel-div">
 
-<section id="featured-photos" th:replace="carousel :: carousel">
+    <section id="featured-photos" th:replace="carousel :: carousel">
 
-</section>
+    </section>
+</div>
 
 
 <section id="categories">
