--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Website</title>
-<!--    <link rel="stylesheet" th:href="@{css/frontEnd/index.css}">-->
+    <!--    <link rel="stylesheet" th:href="@{css/frontEnd/index.css}">-->
     <link rel="stylesheet" th:href="@{/css/frontEnd/index.css}">
-<!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
+    <!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
-        #carousel-div{
+        #carousel-div {
             width: 100%;
             height: 100%;
         }
 
-        #mask{
-            background: rgba(0 , 0 , 0 , .1);
+        #mask {
+            background: rgba(0, 0, 0, .1);
             width: 100%;
             height: 100%;
             position: absolute;
@@ -24,9 +24,20 @@
         }
 
         .carousel-control-prev,
-        .carousel-control-next,
-        .carousel-a-btn{
+        .carousel-control-next {
             z-index: 1000;
+        }
+
+        .footer-div{
+            position: relative;
+            padding-bottom: 50px
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /*height: 100%;*/
         }
     </style>
 
@@ -81,12 +92,13 @@
     <!-- Additional photos -->
 </section>
 
-<footer>
-    <p>&copy; 2024 for DoDo</p>
-    <a href="#">Privacy Policy</a>
-    <a href="#">Contact</a>
-</footer>
-
+<div class="footer-div">
+    <footer>
+        <p>&copy; 2024 for DoDo</p>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Contact</a>
+    </footer>
+</div>
 <script th:src="@{/js/frontEnd/index.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
