--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,10 +8,10 @@
     <!--    <link rel="stylesheet" th:href="@{/css/frontEnd/carousel.css}">-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
     <style>
-        #carousel-div {
-            width: 100%;
-            height: 100%;
-        }
+        /*#carousel-div {*/
+        /*    width: 100%;*/
+        /*    height: 100%;*/
+        /*}*/
 
         #mask {
             background: rgba(0, 0, 0, .1);
@@ -28,7 +28,7 @@
             z-index: 1000;
         }
 
-        .footer-div{
+        .footer-div {
             position: relative;
             padding-bottom: 50px
         }
@@ -39,6 +39,24 @@
             width: 100%;
             /*height: 100%;*/
         }
+
+        .category:hover .category-p {
+            transform: scale(1);
+        }
+
+        .category-p {
+
+            transform: scale(0);
+            transition: .3s;
+            margin-top: -3em;
+        }
+
+        #categories-div{
+            display: flex;
+            align-items: center;
+            flex-direction: column;
+        }
+
     </style>
 
 
@@ -66,30 +84,31 @@
     </section>
 </div>
 
+<div id="categories-div">
 
-<section id="categories">
-    <div class="category">
-        <img src="nature-icon.png" alt="Nature">
-        <p>Nature</p>
-    </div>
-    <div class="category">
-        <img src="city-icon.png" alt="City">
-        <p>City</p>
-    </div>
-    <div class="category">
-        <img src="portrait-icon.png" alt="Portrait">
-        <p>Portrait</p>
-    </div>
-</section>
+    <h2>分類</h2>
+    <section id="categories">
+
+        <div class="category">
+            <p class="category-p">Nature</p>
+            <img class="category-img" th:src="@{/icon/frontEnd/index/images.webp}" alt="Nature">
+        </div>
+        <div class="category">
+            <p class="category-p">City</p>
+            <img class="category-img" th:src="@{/icon/frontEnd/index/sun.webp}" alt="City">
+        </div>
+
+    </section>
+</div>
 
 <section id="popular-photos">
-    <h2>Popular Photos</h2>
-    <!-- Photos grid -->
+    <h2>人氣照片</h2>
+
     <div class="photo">
         <img src="photo1.jpg" alt="Photo 1">
         <p>Photo 1 Description</p>
     </div>
-    <!-- Additional photos -->
+
 </section>
 
 <div class="footer-div">
