Members index classify ok

--- a/src/main/resources/templates/frontEnd/index.html
+++ b/src/main/resources/templates/frontEnd/index.html
@@ -79,7 +79,7 @@
 </header>
 <div id="carousel-div">
 
-    <section id="featured-photos" th:replace="carousel :: carousel">
+    <section id="featured-photos" th:replace="frontEnd/indexUntil/carousel :: carousel">
 
     </section>
 </div>
