--- a/src/main/resources/templates/frontEnd/index.html
+++ b/src/main/resources/templates/frontEnd/index.html
@@ -57,6 +57,11 @@
             flex-direction: column;
         }
 
+        #carouselExampleCaptions{
+            WIDTH: 90%;
+            MARGIN: 1em auto;
+        }
+
     </style>
 
 
