--- a/src/main/resources/templates/frontEnd/indexUntil/carousel.html
+++ b/src/main/resources/templates/frontEnd/indexUntil/carousel.html
@@ -9,7 +9,7 @@
 
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img th:src="@{image/frontEnd/CLT-L29026 (2).JPG}" class="d-block w-100" alt="First slide">
+            <img th:src="@{/image/frontEnd/new.jpg}" class="d-block w-100" alt="First slide">
 <!--            <div class="carousel-caption d-none d-md-block">-->
             <div class="carousel-caption hidden-xs-down">
                 <h1 class="carousel-h1">基隆外海</h1>
