member createAnAccount making

--- a/src/main/resources/templates/frontEnd/index.html
+++ b/src/main/resources/templates/frontEnd/index.html
@@ -51,6 +51,7 @@
             margin-top: -3em;
         }
 
+
         #categories-div{
             display: flex;
             align-items: center;
@@ -62,6 +63,11 @@
             MARGIN: 1em auto;
         }
 
+        foot{
+            display: flex;
+            flex-direction: column;
+            height: 3em;
+        }
     </style>
 
 
@@ -106,21 +112,22 @@
     </section>
 </div>
 
-<section id="popular-photos">
-    <h2>人氣照片</h2>
+<!--<section id="popular-photos">-->
+<!--    <h2>人氣照片</h2>-->
 
-    <div class="photo">
-        <img src="photo1.jpg" alt="Photo 1">
-        <p>Photo 1 Description</p>
-    </div>
+<!--    <div class="photo">-->
+<!--        <img src="photo1.jpg" alt="Photo 1">-->
+<!--        <p>Photo 1 Description</p>-->
+<!--    </div>-->
 
-</section>
+<!--</section>-->
 
 <div class="footer-div">
     <footer>
+        <a href="https://github.com/CuttleFish999">DoDoGit</a>
         <p>&copy; 2024 for DoDo</p>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Contact</a>
+<!--        <a href="#">Privacy Policy</a>-->
+<!--        <a href="#">Contact</a>-->
     </footer>
 </div>
 <script th:src="@{/js/frontEnd/index.js}"></script>
