--- a/src/main/resources/static/css/frontEnd/index.css
+++ b/src/main/resources/static/css/frontEnd/index.css
@@ -66,7 +66,7 @@ nav button {
 
 .category, .photo {
     width: 100px;
-    margin: 10px;
+    margin: 1em;
     text-align: center;
     display: inline-block;
 }
