--- a/src/main/resources/templates/frontEnd/indexUntil/carousel.html
+++ b/src/main/resources/templates/frontEnd/indexUntil/carousel.html
@@ -12,22 +12,22 @@
             <img th:src="@{/image/frontEnd/new.jpg}" class="d-block w-100" alt="First slide">
 <!--            <div class="carousel-caption d-none d-md-block">-->
             <div class="carousel-caption hidden-xs-down">
-                <h1 class="carousel-h1">基隆外海</h1>
-                <h2 class="carousel-h2">如果你正在尋找一個旅遊目的地，那麼這張圖片中的海景是一個不錯的選擇。</h2>
+                <h1 class="carousel-h1">2024-01</h1>
+<!--                <h5 class="carousel-h2">如果你正在尋找一個旅遊目的地，那麼這張圖片中的海景是一個不錯的選擇。</h5>-->
             </div>
         </div>
         <div class="carousel-item">
             <img th:src="@{image/frontEnd/CLT-L29033 (1).JPG}" class="d-block w-100" alt="Second slide">
             <div class="carousel-caption hidden-xs-down">
-                <h1 class="carousel-h1">Second slide label</h1>
-                <h2 class="carousel-h2">Some representative placeholder content for the second slide.</h2>
+                <h1 class="carousel-h1">2024-02</h1>
+<!--                <h2 class="carousel-h2">Some representative placeholder content for the second slide.</h2>-->
             </div>
         </div>
         <div class="carousel-item">
             <img th:src="@{image/frontEnd/CLT-L29044.JPG}" class="d-block w-100" alt="Third slide">
             <div class="carousel-caption hidden-xs-down">
-                <h1 class="carousel-h1">Third slide label</h1>
-                <h2 class="carousel-h2">Some representative placeholder content for the third slide.</h2>
+                <h1 class="carousel-h1">2024-03</h1>
+<!--                <h2 class="carousel-h2">Some representative placeholder content for the third slide.</h2>-->
             </div>
         </div>
     </div>
