member login html ok

--- a/src/main/resources/templates/frontEnd/login.html
+++ b/src/main/resources/templates/frontEnd/login.html
@@ -56,8 +56,8 @@
 
 <div class="container">
     <h2>登入</h2>
-    <form action="/login" method="post">
-        <input type="text" name="username" placeholder="使用者名稱" required>
+    <form action="/loginAPI" method="post">
+        <input type="text" name="account" placeholder="使用者名稱" required>
         <input type="password" name="password" placeholder="密碼" required>
         <input type="submit" value="登入">
     </form>
