index interceptor ok

--- a/src/main/resources/templates/frontEnd/indexUntil/carousel.html
+++ b/src/main/resources/templates/frontEnd/indexUntil/carousel.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="carousel-item">
-            <img th:src="@{image/frontEnd/CLT-L29033 (1).JPG}" class="d-block w-100" alt="Second slide">
+            <img th:src="@{image/frontEnd/CLT-L290332.JPG}" class="d-block w-100" alt="Second slide">
             <div class="carousel-caption hidden-xs-down">
                 <h1 class="carousel-h1">2024-02</h1>
 <!--                <h2 class="carousel-h2">Some representative placeholder content for the second slide.</h2>-->
