--- a/src/main/resources/templates/frontEnd/index.html
+++ b/src/main/resources/templates/frontEnd/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Website</title>
