test viewport index

--- a/src/main/resources/templates/frontEnd/viewport/viewindex.html
+++ b/src/main/resources/templates/frontEnd/viewport/viewindex.html
@@ -16,9 +16,22 @@
 
         .card-img-top {
             width: 100%;
-            height: 15vw;
+            /*height: 15vw;*/
             object-fit: cover;
         }
+
+    /*  RWD  */
+
+         body {
+             padding-top: 20px;
+         }
+
+        .card {
+            margin-bottom: 20px;
+        }
+
+    </style>
+
     </style>
 </head>
 <body>
@@ -40,10 +53,26 @@
                 </div>
             </div>
             <div class="row">
+
                 <!-- 相簿的卡片 -->
+<!--                <div class="col-md-4">-->
+<!--                    <div class="card">-->
+<!--                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">-->
+<!--                        <div class="card-body">-->
+<!--                            <h5 class="card-title">相簿標題</h5>-->
+<!--                            <p class="card-text">相簿描述。</p>-->
+<!--                            <a href="#" class="btn btn-primary">查看</a>-->
+<!--                            <a href="#" class="btn btn-secondary">編輯</a>-->
+<!--                            <a href="#" class="btn btn-danger">刪除</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+                <!-- 相簿的卡片 2-->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
+                        <div class="img-container">
+                            <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">相簿標題</h5>
                             <p class="card-text">相簿描述。</p>
@@ -53,10 +82,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- 相簿的卡片 -->
+                <!-- 相簿的卡片 2-->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
+                        <div class="img-container">
+                            <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">相簿標題</h5>
                             <p class="card-text">相簿描述。</p>
@@ -66,49 +97,12 @@
                         </div>
                     </div>
                 </div>
-                <!-- 相簿的卡片 -->
+                <!-- 相簿的卡片 2-->
                 <div class="col-md-4">
                     <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">相簿標題</h5>
-                            <p class="card-text">相簿描述。</p>
-                            <a href="#" class="btn btn-primary">查看</a>
-                            <a href="#" class="btn btn-secondary">編輯</a>
-                            <a href="#" class="btn btn-danger">刪除</a>
+                        <div class="img-container">
+                            <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                         </div>
-                    </div>
-                </div>
-                <!-- 相簿的卡片 -->
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">相簿標題</h5>
-                            <p class="card-text">相簿描述。</p>
-                            <a href="#" class="btn btn-primary">查看</a>
-                            <a href="#" class="btn btn-secondary">編輯</a>
-                            <a href="#" class="btn btn-danger">刪除</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- 相簿的卡片 -->
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">相簿標題</h5>
-                            <p class="card-text">相簿描述。</p>
-                            <a href="#" class="btn btn-primary">查看</a>
-                            <a href="#" class="btn btn-secondary">編輯</a>
-                            <a href="#" class="btn btn-danger">刪除</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- 相簿的卡片 -->
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="https://via.placeholder.com/400x300" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">相簿標題</h5>
                             <p class="card-text">相簿描述。</p>
